[tool.poetry]
name = "great-expectations-example"
version = "0.1.0"
description = "Hello world of great expectations for data quality & integrity checks"
authors = ["washburp <paul.washburn@pinnacol.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
great-expectations = "^0.10.9"

[tool.poetry.dev-dependencies]
jupyter = ""
notebook = "^6.0.3"
qtconsole = ""
jupyter-console = "^6.1.0"
nbconvert = "^5.6.1"
ipykernel = "^5.2.1"
ipywidgets = "^7.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
